--- a/index.html
+++ b/index.html
@@ -113,6 +113,161 @@
 			onclick="location.href='./#experience'"
 		/>
 	</section>
+	<section id="experience">
+		<p class="section__text__p1">Explore My</p>
+		<h1 class="title">Experience</h1>
+		<div class="experience-details-container">
+			<div class="about-containers">
+				<div class="details-container">
+					<h2 class="experience-sub-title">Fullstack Developer</h2>
+					<div class="article-container">
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>HTML</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>CSS</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>SASS</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>JAVASCRIPT</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>PHP</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>OOP</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+					</div>
+				</div>
+				<div class="details-container">
+					<h2 class="experience-sub-title">Fullstack Developer</h2>
+					<div class="article-container">
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>SQL</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>GIT</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>SASS</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>EXPRESS JS</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>NODE JS</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+						<article>
+							<img 
+								src="./assets/checkmark.png" 
+								alt="Experience icon"
+								class="icon"
+							/>
+							<div>
+								<h3>C</h3>
+								<p>Experienced</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</div>
+		</div>
+		<img src="./assets/arrow.png" 
+			alt="Arrow icon" 
+			class="icon arrow"
+			onclick="location.href='./#projects'"
+		/>
+	</section>
 	<script src="script.js"></script>
 </body>
 </html>
