add new personal project - google map marker

--- a/index.html
+++ b/index.html
@@ -306,6 +306,24 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="./assets/project-4.png"
+                alt="moviemosaic"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Google Map Marker</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://create-google-map.pages.dev/', '_blank')"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="./assets/project-3.png"
                 alt="pism"
                 class="project-img"
