--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume.pdf')"
+            onclick="window.open('./assets/CV - Amirrul Haiqal Bin Mohd Lazim.pdf')"
           >
             Download CV
           </button>
@@ -311,11 +311,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Google Map Marker</h2>
+            <h2 class="experience-sub-title project-title">MMOS (POS SYSTEM)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://create-google-map.pages.dev/', '_blank')"
+                onclick="window.open('https://mmos.my//', '_blank')"
               >
                 Live Demo
               </button>
