--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               />
               <h3>Experience</h3>
               <p>1 years <br />Mainframe Development</p>
-              <p>2+ years <br />Fullstack Development</p>
+              <p>3+ years <br />Fullstack Development</p>
             </div>
             <div class="details-container">
               <img
@@ -108,7 +108,7 @@
           <div class="text-container">
             <p>
               Experienced software engineer with more than 3 years of professional experience, including 1 year in
-              mainframe development and 2 years in web-based development. Committed to continuous learning
+              mainframe development and 3 years in web-based development. Committed to continuous learning
               and seeking opportunities to expand knowledge while making valuable contributions to projects and
               the company.
             </p>
@@ -248,6 +248,28 @@
                 />
                 <div>
                   <h3>Git</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Amazon Simple Storage Service (S3)</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Amazon Simple Email Service (SES)</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
